--- a/www/templates/petlist.html
+++ b/www/templates/petlist.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Playlists">
+<ion-view view-title="Mis Mascotas">
   <ion-content>
     <ion-list>
       <ion-item ng-repeat="playlist in playlists" href="#/app/playlists/{{playlist.id}}">
