--- a/www/templates/welcome.html
+++ b/www/templates/welcome.html
@@ -1,5 +1,17 @@
 <ion-view view-title="Bienvenido">
   <ion-content>
-    <h1>Welcome</h1>
+    <div class="list card">
+
+  <div class="item item-body">
+    <img class="full-image" src="img/upetlogo.png">
+    <p>
+      This is a "Facebook" styled Card. The header is created from a Thumbnail List item,
+      the content is from a card-body consisting of an image and paragraph text. The footer
+      consists of tabs, icons aligned left, within the card-footer.
+    </p>
+    
+  </div>
+  
+</div>
   </ion-content>
 </ion-view>
