--- a/www/templates/detailpet.html
+++ b/www/templates/detailpet.html
@@ -11,7 +11,6 @@
            ng-if="!pet.attributes.picture" >
         <img ng-src="img/pet.png" >
       </div >
-        
         <p class="row">
         <label class="col">
          <b>Nombre :</b> {{pet.attributes.name}}
@@ -40,7 +39,7 @@
          <label class="col">
         </label>
         </p>
-         <button class="button button-royal button-block" > 
+         <button class="button button-royal button-block" ui-sref="app.editPet" > 
         <i class="icon ion-checkmark"></i> Editar Mascota
         </button>
       </ion-item>
